Fixed navbar spacing, fixed title and search form spacing on larger screens

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -17,6 +17,9 @@ header {
 .nav-container {
   max-width: 92%;
   margin-left: 4%;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 12px;
+  padding-top: 12px;
 }
 
 .wrap {
@@ -40,10 +43,6 @@ header {
   padding-bottom: .35rem;
 }
 
-.nav-container {
-  border-bottom: 1px solid #ddd;
-}
-
 .form-control {
   background-color: white;
 }
@@ -53,7 +52,7 @@ header {
 }
 
 .navgray {
-  padding-top: .4rem;
+  padding-top: .5rem;
 }
 
 .nav-text-white {
@@ -398,7 +397,7 @@ header {
 
   .footer-link {
     color: #bbb;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     text-decoration: none;
   }
@@ -479,6 +478,11 @@ header {
     padding-left: 0;
   }
 
+  .link-row {
+    margin-left: 0;
+    font-size: 1rem;
+  }
+
 }
 
 @include media-breakpoint-up(md) {
@@ -504,6 +508,22 @@ header {
   .profile-pic {
     width: 15%;
     padding-top: 2%;
+  }
+
+  .link-row {
+    width: 50%;
+  }
+
+  .footer-2 {
+    padding-top: 7px;
+  }
+
+}
+
+@media (min-width: 1126px) {
+
+  .footer-2 {
+    padding-top: 0;
   }
 
 }
@@ -609,6 +629,7 @@ header {
   .card-container {
     padding-left: 0;
     padding-right: 0;
+    max-width: none;
   }
 
   .card-column {
@@ -657,19 +678,20 @@ header {
   }
 
   .play {
-    height: 14px;
+    height: 13px;
+    margin-bottom: 3px;
   }
 
   .video-link {
     padding-top: 4rem;
     padding-bottom: 3rem;
-    padding-left: 27%;
     margin-bottom: .2rem;
   }
 
   .video-text {
     font-size: 1.154rem;
     font-weight: 500;
+    padding-left: 5px;
   }
 
   .btn-primary {
@@ -695,10 +717,6 @@ header {
       padding-left: 2.6rem;
     }
 
-    .video-link {
-      padding-left: 31%;
-    }
-
   }
 
   @media (min-width: 425px) {
@@ -717,10 +735,6 @@ header {
 
     .middle-icon {
       padding-left: 3rem;
-    }
-
-    .video-link {
-      padding-left: 34%;
     }
 
   }
@@ -764,6 +778,15 @@ header {
     .list-button {
       margin-left: 15%;
       width: 70%;
+    }
+
+  }
+
+  @media (min-width: 992px) {
+    .list-button {
+      margin-top: 20%;
+      width: 80%;
+      margin-left: 10%;
     }
 
   }
@@ -826,17 +849,49 @@ header {
       padding-bottom: 3rem;
     }
 
+  }
+
+  @media (min-width: 1100px) {
+
     .list-button {
-      margin-top: 5rem;
-      width: 80%;
+      margin-top: 15%;
     }
 
   }
 
+  @media (min-width: 1200px) {
+
+    .list-button {
+      margin-top: 10%;
+    }
+  }
+
   @media (min-width: 1440px) {
+
+    .home-hero-image {
+      height: 1080px;
+    }
+
+    .home-title {
+      font-size: 4rem;
+    }
+
+    .home-subtitle {
+      font-size: 2rem;
+      top: 26%;
+    }
+
+    .home-search {
+      top: 37%;
+    }
 
     .icon-row {
       right: 18%;
+      bottom: 38%;
+    }
+
+    .card-title {
+      font-size: 2rem;
     }
 
     .bottom-home {
@@ -848,9 +903,18 @@ header {
       margin-top: 4rem;
     }
 
-    .video-link {
-      padding-left: 41%;
+  }
+
+  @media (min-width: 1925px) {
+
+    .home-title {
+      font-size: 5.8rem;
     }
+
+    .home-subtitle {
+      font-size: 3rem;
+    }
+
   }
 
 }
